# watsonx-developer-hub

./: .gitignore  README.md
.github/workflows/: README.md  deploy-agent.yaml
agents/: README.md
agents/base/autogen-agent/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/base/autogen-agent/examples/: _interactive_chat.py
agents/base/autogen-agent/scripts/: deploy.py  setup-config.py
agents/base/autogen-agent/src/autogen_agent_base/: agent.py  tools.py
agents/base/autogen-agent/tests/: test_tools.py
agents/base/beeai-framework-react-agent/: CHANGES.rst  README.md  ai_service.py  pyproject.toml
agents/base/beeai-framework-react-agent/examples/: execute_ai_service_locally.py
agents/base/beeai-framework-react-agent/scripts/: deploy.py
agents/base/beeai-framework-react-agent/tests/: test_tools.py
agents/base/beeai-framework-workflow/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/base/beeai-framework-workflow/examples/: _interactive_chat.py  query_existing_deployment.py
agents/base/beeai-framework-workflow/src/beeai_framework_workflow_base/: workflow.py
agents/base/crewai-websearch-agent/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/base/crewai-websearch-agent/examples/: execute_ai_service_locally.py
agents/base/crewai-websearch-agent/schema/: request.json
agents/base/crewai-websearch-agent/scripts/: deploy.py
agents/base/crewai-websearch-agent/src/crewai_web_search/: crew.py
agents/base/crewai-websearch-agent/src/crewai_web_search/config/: agents.yaml
agents/base/crewai-websearch-agent/tests/: test_tools.py
agents/base/langgraph-react-agent/: README.md  ai_service.py  config.toml.example  pyproject.toml
agents/base/langgraph-react-agent/benchmarking_data/: benchmarking_data.json  benchmarking_data.jsonl
agents/base/langgraph-react-agent/scripts/: quality-check.py  quality_check.py  setup-config.py
agents/base/langgraph-react-agent/src/langgraph_react_agent_base/: agent.py
agents/base/llamaindex-websearch-agent/: README.md  ai_service.py  config.toml.example  pyproject.toml
agents/base/llamaindex-websearch-agent/examples/: _interactive_chat.py  execute_ai_service_locally.py
agents/base/llamaindex-websearch-agent/schema/: request.json
agents/base/llamaindex-websearch-agent/scripts/: deploy.py
agents/base/llamaindex-websearch-agent/src/llama_index_workflow_agent_base/: workflow.py
agents/base/llamaindex-websearch-agent/tests/: test_tools.py
agents/community/customer_onboarding/: CHANGES.rst  README.md  ai_service.py  config.toml.example
agents/community/langgraph-agentic-rag/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/community/langgraph-agentic-rag/examples/: execute_ai_service_locally.py
agents/community/langgraph-arxiv-research/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/community/langgraph-arxiv-research-model-gateway/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/community/langgraph-arxiv-research-model-gateway/src/langgraph_react_agent_model_gateway/: __init__.py  agent.py  tools.py
agents/community/langgraph-arxiv-research-model-gateway/tests/: test_tools.py
agents/community/langgraph-arxiv-research/examples/: _interactive_chat.py  execute_ai_service_locally.py  (+1 more)
agents/community/langgraph-react-agent-with-database/: ai_service.py  config.toml.example  pyproject.toml
agents/community/langgraph-react-agent-with-database/schema/: request.json
agents/community/langgraph-react-agent-with-database/src/langgraph_react_agent/: agent.py  tools.py
agents/community/langgraph-react-agent-with-database/src/langgraph_react_agent_database/: agent.py
agents/community/langgraph-react-with-database-memory/: README.md  ai_service.py  config.toml.example  example_payload.json  pyproject.toml  utils.py
agents/community/langgraph-react-with-database-memory/examples/: clear_thread_history.py  execute_ai_service_locally.py  query_existing_deployment.py
agents/community/langgraph-react-with-database-memory/schema/: request.json
agents/community/langgraph-react-with-database-memory/src/langgraph_react_with_database_memory/: __init__.py  agent.py
agents/community/langgraph-react-with-database-memory/tests/: test_tools.py
agents/community/langgraph-tavily-tool/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/community/langgraph-tavily-tool/scripts/: deploy.py
agents/community/langgraph-tavily-tool/src/langgraph_tavily_tool/: __init__.py  agent.py  tools.py
agents/community/langgraph-tavily-tool/tests/: test_tools.py
agents/community/langgraph-with-external-tools/: README.md  ai_service.py  pyproject.toml
agents/community/langgraph_react_with_database_memory/: README.md  ai_service.py  config.toml.example
agents/community/mcp-autoai-template/: .gitignore  README.md  interact_with_mcp.py  mcp_server.py  requirements.txt  template.env  utils.py
agents/crewai/: README.md  ai_service.py  config.toml
agents/crewai/examples/: _interactive_chat.py  execute_ai_service_locally.py  query_existing_deployment.py
agents/crewai/schema/: response.json
agents/crewai/scripts/: deploy.py
agents/crewai/tests/: test_tools.py
agents/langgraph/: README.md  ai_service.py  pyproject.toml
agents/langgraph-arxiv-research/: README.md  pyproject.toml
agents/langgraph-arxiv-research/tests/: test_tools.py
agents/langgraph-react-agent-base/: README.md
agents/langgraph/examples/: _interactive_chat.py  execute_ai_service_locally.py
agents/llamaindex/: CHANGES.rst  README.md  ai_service.py  config.toml
agents/llamaindex/scripts/: deploy.py  workflow_visualizer.py
apps/: README.md
apps/base/nextjs-chat-with-ai-service/: package-lock.json  package.json
apps/nextjs-carbon-react-ui/: README.md  package.json  template.env
scripts/: setup-agent-deployment.py  setup-agent-test.py  setup-config.py  setup-template-test.py  setup-tools-test.py  utils.py
(+28 files in other folders)
