[tool.poetry]
name = "beeai_framework_workflow_base"
version = "0.1.0"
description = "A template for a beeai-framework LLM app deployable on IBM Cloud as an ai_service."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "beeai_framework_workflow_base", from = "src" }
]

[tool.poetry.dependencies]
python = "<3.13,>=3.11"
beeai-framework = { version = "^0.1.19", extras = ["duckduckgo"] }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
ibm-watsonx-ai = { version = ">=1.1.22", python = ">=3.11,<3.13" }
pytest = "^8.3.3"
pytest-asyncio = "^0.25.3"
nest-asyncio = "^1.6.0"
numpy = "<2.0.0,>=1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
