[tool.poetry]
name = "langgraph_react_agent_base"
version = "0.1.0"
description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_react_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-ibm = "^0.3.7"
python-dotenv = "^1.0.1"
ibm-watsonx-ai = { version = ">=1.3.5", python = ">=3.11,<3.13" }
langgraph = ">0.2,<0.3"
pytest = "^8.3.3"


[tool.poetry.group.eval.dependencies]
setuptools = "80.9.*"
unitxt = "^1.24.0"
nltk = "^3.9.1"
rouge-score = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
