[tool.poetry]
name = "langgraph_react_agent"
version = "0.1.0"
description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on storing messages history in a database"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_react_agent", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-ibm = "^0.3.7"
python-dotenv = "^1.0.1"
ibm-watsonx-ai = { version = ">=1.1.22", python = ">=3.11,<3.13" }
langgraph = ">0.2,<0.3"
pytest = "^8.3.3"
langgraph-checkpoint-postgres = "^2.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
