[tool.poetry]
name = "langgraph-tavily-tool"
version = "0.1.0"
description = "A LangGraph-based template for building and deploying LLM applications as AI services on IBM Cloud. This example demonstrates secure integration with tavily tool via function calling, using credentials managed through IBM Secrets Manager."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_tavily_tool", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-ibm = "^0.3.7"
langchain-tavily = "^0.1.5"
python-dotenv = "^1.0.1"
ibm-watsonx-ai = { version = ">=1.1.22", python = ">=3.11,<3.13" }
langgraph = ">0.2,<0.3"
ibm_secrets_manager_sdk = "^2.1.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
